add clear cache api
