# room-test-module/app/Http/Controllers/Controller.php
@@ -6,6 +6,7 @@ use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
+use Illuminate\Support\Facades\Redis;
 
 /**
  * @OA\Info(title="Supervisor module API", version="0.1"),
@@ -21,4 +22,30 @@ use Illuminate\Routing\Controller as BaseController;
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
+
+
+    /**
+     * @OA\Get (
+     *     path="/api/clear",
+     *     summary="Clear cache",
+     *     tags={"Clear"},
+     *     @OA\Response(
+     *     response="200",
+     *     description="Clear cache"
+     *    ),
+     *     security={{"bearerAuth":{}}}
+     *     )
+     * )
+     *
+     * @return void
+     */
+    protected function clear_cache()
+    {
+        Redis::del(AssignmentController::$cacheName);
+        Redis::del(CheckinController::$cacheName);
+        Redis::del(RoomDetailController::$cacheName);
+        Redis::del(RoomDetailController::$cacheName);
+        Redis::del(RoomTestController::$cacheName);
+        Redis::del(ShiftController::$cacheName);
+    }
 }
